[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Base/Connector/In.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Elements/Wire/Wire.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Base/Element/Element.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Base/Connector/Out.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Base/Element/ElementShader.gdshader" type="Shader" id=5]
[ext_resource path="res://Scenes/Elements/Wire/wire_off.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Base/Element/DissolveTexture.tres" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/is_dissolve = false
shader_param/outline_width = 1.0
shader_param/outline_color = null
shader_param/is_outlined = false
shader_param/dissolveNoise = ExtResource( 7 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/is_dissolve = false
shader_param/outline_width = 1.0
shader_param/outline_color = null
shader_param/is_outlined = false
shader_param/dissolveNoise = ExtResource( 7 )

[node name="Wire" instance=ExtResource( 3 )]
script = ExtResource( 2 )
type = 9

[node name="Line2D" type="Line2D" parent="." index="0"]
width = 4.0
default_color = Color( 0.4, 0.501961, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" parent="FirstArea" index="0"]
shape = SubResource( 5 )

[node name="SecondArea" type="Area2D" parent="." index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondArea" index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="3"]
material = SubResource( 4 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="." index="4"]
material = SubResource( 3 )
texture = ExtResource( 6 )

[node name="In" parent="Connectors" index="0" instance=ExtResource( 1 )]

[node name="In2" parent="Connectors" index="1" instance=ExtResource( 1 )]

[node name="Out" parent="Connectors" index="2" instance=ExtResource( 4 )]

[node name="Out2" parent="Connectors" index="3" instance=ExtResource( 4 )]

[connection signal="mouse_entered" from="SecondArea" to="." method="_on_SecondArea_mouse_entered"]
[connection signal="mouse_exited" from="SecondArea" to="." method="_on_SecondArea_mouse_exited"]
